Fix footer visibility

--- a/client/components/AboutPage/AboutPage.scss
+++ b/client/components/AboutPage/AboutPage.scss
@@ -16,6 +16,7 @@
 .about-container {
   margin-top: 70px;
   max-width: 1000px;
+  height: 100vh;
   padding: 20px;
   align-self: center;
   > p {
@@ -28,7 +29,7 @@
   color: $white;
   height: 120px;
   width: 100%;
-  position: fixed;
+  position: relative;
   bottom: 0;
   text-align: center;
   .text {
